<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/alumni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/alumni_img"
            android:layout_width="385dp"
            android:layout_height="145dp"
            android:src="@mipmap/alumni_house" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alumni"
            android:textColor="#fff"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_gravity="bottom" />
    </FrameLayout>

    <TextView
        android:id="@+id/alumni_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Details"
        android:layout_below="@id/alumni"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alumni_heading"
        android:layout_marginLeft="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumni_head"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumni_dean"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumni_address"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumni_contact"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>