<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lib_pic"
            android:layout_width="360dp"
            android:layout_height="182dp"
            android:src="@mipmap/library" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Library"
            android:textColor="#fff"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_gravity="bottom" />
    </FrameLayout>

    <TextView
        android:id="@+id/alumni_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Details"
        android:layout_below="@id/library"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alumni_heading"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/librarian"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Librarian"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_address"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_contact"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>