<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lib_pic"
            android:layout_width="360dp"
            android:layout_height="182dp"
            android:src="@mipmap/library" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sports"
            android:textColor="#fff"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_gravity="bottom" />
    </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alumni_heading"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">
    <TextView
        android:id="@+id/alumni_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Details"
        android:textColor="#0e0d0d"
        android:layout_below="@id/library"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:layout_marginTop="8dp"
            android:textColor="#0b0a0a"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Director"
            android:textColor="#050505"
            android:textStyle="bold"

            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directorate_address"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:textColor="#60a7c9"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directorate_contact"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="#9c140c"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>